llm: llm.txt fix missing content from table and footnotes (#1584)